--- a/src/style.css
+++ b/src/style.css
@@ -1,58 +1,199 @@
 body {
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  vertical-align: bottom;
 }
 
-.block {
-    color: white;
-    background-color: rgb(75, 72, 72);
-    font-size: 38px;
-    text-indent: 200px;
-    vertical-align: bottom;
-  }
+.container1 {
+  text-indent: 250px;
+  width: window;
+  height: 300px;
+  background-color: rgb(65, 57, 57);
+}
 
-.is-invalid {
-    border-color: red;
-    color: red;
+.block p {
+  color: rgb(211, 211, 206);
+  font-size: 10px;
+}
+
+.block h2 {
+  color: ivory;
+  font-size: 18px;
+}
+
+.form-row {
+  display: inline-flex;
 }
 
 .form-control {
-  width: 500px;
+  position: absolute;
+  left: 255px;
   height: 45px;
+  width: 700px;
+  border-radius: 7px;
+}
+
+.modal {
+  position: fixed;
+  top: 70px;
+  left: 500px;
+  width: 500px;
+  height: 250px;
+  text-align: left;
+  padding-left: 25px;
+  background: white;
+  border: 0.2px solid rgb(12, 12, 12);
+  border-radius: 7px;
+}
+
+.hidden {
+  display: none;
+}
+
+.on{
+	content: '';
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%; 
+	height: 100%;
+	z-index: 9999;
+  backdrop-filter: blur(2px);
+}
+
+.is-invalid {
+  font-size: 15px;
+  border-color: red;
+  color: red;
+}
+
+.is-valid {
+font-size: 15px;
+color: rgb(20, 224, 105);
+font-weight: normal;
+}
+
+.button {
+  position: relative;
+  left: 550px;
+  font-size: 20px;
+  background-color: rgb(88, 88, 107);
+  color: white;
+  width: 125px;
+  height: 52px;
   border-radius: 7px;
 }
 
 .btn {
-  font-size: 20px;
-  background-color: rgb(75, 75, 121);
+  position: absolute;
+  vertical-align: middle;
+  left: 1080px;
+  font-size: 15px;
+  background-color: rgb(88, 88, 107);
   color: white;
-  width: 50px;
-  height: 45px;
-  border-radius: 7px;
+  width: 100px;
+  height: 30px;
+  border-radius: 3px;
+  text-align: center;
 }
 
-p {
-  font-size: 16px;
+.mdl {
+  width: 150px;
+  height: 40px;
+  border-radius: 4px;
+  text-align: center;
+  font-size: 15px;
+  margin-right: 10px;
+  color: aliceblue;
+  background-color: rgb(81, 81, 243);
 }
 
-ul {
-  list-style: none;
-  text-indent: 185px;
+.header {
+  display: inline-flex;
+  vertical-align: bottom;
 }
 
-.feedback {
-  font-size: 18px;
+.close {
+  margin-left: 250px;
+  height: 25px;
 }
 
-.input-group {
-  display: inline;
+.body {
+  border: 0.2px solid rgb(211, 204, 204);
+  padding-left: 5px;
+  padding-right: 200px;
+  height: 120px;
+  width: 270px;
+  text-align: left;
+  vertical-align: middle;
 }
 
-h3 {
-  text-indent: 185px;
-  font-weight: normal;
-  font-size: 14px;
+.footer {
+  display: inline-flex;
+  margin-left: 150px;
+  vertical-align: bottom;
+}
+
+.feeds ul {
+  margin-left: 250px;
+  width: 900px;
+  height: 100px;
+  border: 0.2px solid rgb(211, 204, 204);
+  border-radius: 2px;
+  vertical-align: middle;
+  font-size: 25px;
+}
+
+.feeds p {
+  font-size: 20px;
+}
+
+.feeds h3 {
+  font-size: 15px;
+}
+
+li {
+  margin-left: 210px;
+  width: 920px;
+  height: 50px;
+  border: 0.2px solid rgb(211, 204, 204);
+  border-radius: 2px;
+  display: inline-flex;
+  vertical-align: middle;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+h1 {
+  color: white;
+  font-size: 65px;
+  font-weight: 100;
+  vertical-align: middle;
 }
 
 h2 {
-  text-indent: 200px;
+  text-indent: 250px;
+  font-size: 35px;
+  font-weight: normal;
+}
+
+h3 {
+  font-size: 12px;
+  font-weight: normal;
+}
+
+p {
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(53, 49, 75);
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.normal {
+  font-weight: normal;
 }
